# scRBP

./: .gitignore  README.md
Examples/: Readme.md
scRBP_package/: LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
scRBP_package/src/scrbp/: __init__.py  __main__.py  cli.py
scRBP_package/src/scrbp/commands/: get_grn.py  get_merge_grn.py  get_module.py  get_prune.py  get_regulon.py  get_sketch.py  merge_regulons.py  ras.py  rgs.py  trs.py
scRBP_package/src/scrbp/utils/: __init__.py  io.py  stats.py
